# shared_display

./: Cargo.toml
examples/: dynamic_split.rs  hello_world.rs  resize_app.rs
src/: lib.rs  sharable_display.rs  shared_display.rs  toolkit.rs
tests/: fake_display.rs
